<resources>
    <string name="app_name">Health_Med</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Android Studio</string>
    <string name="nav_header_subtitle" translatable="false">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="dose">Dose</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="profile">Profile</string>
    <string name="title_logout">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <!--Strings for DrawerMenu-->
    <string name="reminder_menu_title">Reminders</string>
    <string name="statistics_menu_title">Statistics</string>
    <string name="pharmacies_menu_title">Pharmacies</string>
    <string name="health_menu_title">Health</string>
    <string name="profile_menu_title">Profile</string>
    <string name="settings_menu_title">Settings</string>
    <string name="rateus_menu_title">Rate us</string>
    <string name="logout_menu_title">Logout</string>
    <!--<string name="login">Login</string>-->
    <string name="no_pharmacies_near">No pharmacies near</string>
    <string name="pharmacies_map">Pharmacies Map</string>
    <string name="search">Search</string>
    <string name="enable_high_accuracy">Please enable High accuracy location</string>
    <string name="enable_location">Please enable location</string>
    <string name="no_gmaps">No tienes instalado google maps</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Strings for Reminder Fragment-->
    <string name="timepicker_done">Done</string>
    <string name="sunday_letter">S</string>
    <string name="monday_letter">M</string>
    <string name="tuesday_letter">T</string>
    <string name="wednesday_letter">W</string>
    <string name="thursday_letter">T</string>
    <string name="friday_letter">F</string>
    <string name="saturday_letter">S</string>
    <string name="sex">Select your gender</string>
    <string name="birthday">Birthday</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="first_setup_header_message">In order to track your progress, we need to record your inital data</string>
    <string name="error">ROOM ERROR</string>
    <string name="sucess">Success</string>
    <string name="save">SAVE</string>
    <string name="empty_field">Empty field</string>

    <!--Strings for Exit-->
    <string name="question">Leaving early?</string>
    <string name="exit_question">Are you sure?</string>

    <string-array name="medication_measurement">
        <item>Pill</item>
        <item>Tablespoon</item>
        <item>Cup</item>
        <item>mL</item>

    </string-array>

    <!--strings for IMC-->

    <string-array name="metrics_type_array">
        <item>CM|KG</item>
        <item>IN|LB</item>
    </string-array>


    <!--Login-->

    <string name="email">Email Id</string>
    <string name="passowrd">Password</string>
    <string name="login">LOGIN</string>
    <string name="show_pwd">Show Password</string>
    <string name="hide_pwd">Hide Password</string>
    <string name="forgot">Forgot password?</string>
    <string name="closebutton">Close Button for Activity</string>
    <string name="newUser">Not a Member yet? Sign Up here.</string>
    <string name="fullName">Full Name</string>
    <string name="mobileNumber">Mobile Number</string>
    <string name="location">Location</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="terms_conditions">By clicking SignUp you agree all the Terms and Conditions.</string>
    <string name="signUp">SIGN UP</string>
    <string name="already_user">Already have Account? Login here.</string>
    <string name="registered_emailid">Please enter your Registered Email Id below:</string>
    <string name="submit">SUBMIT</string>
    <string name="back">BACK</string>
    <string name="initial_weight">Initial weight</string>
    <string name="current_weight">Current weight</string>
    <string name="goal">Goal</string>
    <string name="records">Records</string>
    <string name="set_goal">SET GOAL</string>
    <string name="cancel">CANCEL</string>
    <string name="new_entry_msg">New record</string>
    <string name="date">Date</string>
    <string name="metric_sys">Metric system</string>
    <string name="edit_yourself_text_profile">Edit Yourself</string>
    <string name="birthday_text">Birthday</string>
    <string name="tap_here_text">Tap here</string>
    <string name="first_name">First Name</string>
    <string name="last_name_text">last Name</string>
    <string name="nochanges_text_snackbar">No changes</string>
    <string name="undo_text_snackbar">UNDO</string>
    <string name="home_menu_title">Home</string>
    <string name="empty_error">Empty</string>
    <string name="stop_alarm">Stop</string>
    <string name="alarm_msj">Hey! It\'s time to take your:</string>
    <string name="alarm_cancelled">Alarm Cancelled!</string>
    <string name="delete">Delete</string>
    <string name="dialog_delete_msg">Delete this reminder?</string>
    <string name="welcome">WELCOME</string>
    <string name="just_a_few_steps_ahead">Just a few steps ahead...</string>
    <string name="check_for_near_pharmacies">Check for near pharmacies</string>
    <string name="check_your_latest_reminders">Check your latest reminders</string>
    <string name="check_your_latest_health_data">Check your latest health data</string>
    <string name="check_the_menu_options">Check the menu options</string>


</resources>
