<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeMenu"
    android:id="@+id/fragment_home_menu"
    android:background="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:gravity="center">

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp">
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/home"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circlebackgroundprofile"
                        android:src="@drawable/icon_logged"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/home_menu_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/check_the_menu_options"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:id="@+id/remindersid"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circlebackgroundreminders"
                        android:src="@drawable/ic_reminders"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/reminder_menu_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/check_your_latest_reminders"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>



        </LinearLayout>

        <LinearLayout
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/pharmaciesid"
                android:clickable="true"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circlebackgroundpharmacies"
                        android:src="@drawable/ic_pharmacies"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/pharmacies_menu_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/check_for_near_pharmacies"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:foreground="?android:attr/selectableItemBackground"
                android:id="@+id/healthid"
                android:clickable="true"
                android:layout_width="130dp"
                android:layout_height="160dp"
                android:layout_margin="10dp"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:background="@drawable/circlebackgroundhealth"
                        android:src="@drawable/ic_health"
                        android:padding="15dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:text="@string/health_menu_title" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/colorPrimary"
                        android:layout_margin="10dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/check_your_latest_health_data"
                        android:padding="5dp"
                        android:textColor="@android:color/darker_gray" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <!--<android.support.v7.widget.CardView-->
                <!--android:foreground="?android:attr/selectableItemBackground"-->
                <!--android:id="@+id/profileid"-->
                <!--android:clickable="true"-->
                <!--android:layout_width="130dp"-->
                <!--android:layout_height="160dp"-->
                <!--android:layout_margin="10dp"-->
                <!--app:cardCornerRadius="10dp">-->

                <!--<LinearLayout-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="vertical"-->
                    <!--android:gravity="center">-->

                    <!--<ImageView-->
                        <!--android:layout_width="50dp"-->
                        <!--android:layout_height="50dp"-->
                        <!--android:background="@drawable/circlebackgroundprofile"-->
                        <!--android:padding="10dp"-->
                        <!--android:src="@drawable/icon_login" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:text="Profile"-->
                        <!--android:textStyle="bold" />-->

                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:layout_margin="10dp"-->
                        <!--android:background="@color/colorPrimary" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center"-->
                        <!--android:padding="5dp"-->
                        <!--android:text="Check your information"-->
                        <!--android:textColor="@android:color/darker_gray" />-->

                <!--</LinearLayout>-->
            <!--</android.support.v7.widget.CardView>-->

        <!--</LinearLayout>-->

        <!--<LinearLayout-->
            <!--android:clipToPadding="false"-->
            <!--android:gravity="center"-->
            <!--android:orientation="horizontal"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content">-->

            <!--<android.support.v7.widget.CardView-->
                <!--android:foreground="?android:attr/selectableItemBackground"-->
                <!--android:id="@+id/settingsid"-->
                <!--android:clickable="true"-->
                <!--android:layout_width="270dp"-->
                <!--android:layout_height="115dp"-->
                <!--android:layout_margin="10dp"-->
                <!--app:cardCornerRadius="10dp">-->

                <!--<LinearLayout-->

                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="match_parent"-->
                    <!--android:orientation="vertical"-->
                    <!--android:gravity="center">-->

                    <!--<ImageView-->
                        <!--android:layout_width="50dp"-->
                        <!--android:layout_height="50dp"-->
                        <!--android:layout_marginTop="5dp"-->
                        <!--android:background="@drawable/circlebackgroundsettings"-->
                        <!--android:src="@drawable/ic_settings"-->
                        <!--android:padding="16dp" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:textStyle="bold"-->
                        <!--android:layout_marginTop="10dp"-->
                        <!--android:text="Setiings" />-->

                    <!--<View-->
                        <!--android:layout_width="match_parent"-->
                        <!--android:layout_height="1dp"-->
                        <!--android:background="@color/colorPrimary"-->
                        <!--android:layout_margin="10dp" />-->

                    <!--<TextView-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_height="wrap_content"-->
                        <!--android:gravity="center"-->
                        <!--android:text="Check your settings"-->
                        <!--android:padding="5dp"-->
                        <!--android:textColor="@android:color/darker_gray" />-->

                <!--</LinearLayout>-->
            <!--</android.support.v7.widget.CardView>-->


        </LinearLayout>
    </LinearLayout>
</ScrollView>
